Fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   }
   body {
     @apply font-nunito;
+    @apply h-full;
   }
   h1 {
     @apply text-2xl;
@@ -38,6 +39,10 @@
   }
   a {
     @apply text-blue-600 underline;
+  }
+
+  #root {
+    @apply h-full;
   }
 }
 
